styles: fix .figure--image on mobile landscape viewport
Bug: T331246

--- a/assets/styles/wmui-blog.css
+++ b/assets/styles/wmui-blog.css
@@ -129,8 +129,10 @@ figcaption {
 .figure--image > img,
 .figure--video > video {
 	display: block;
+	min-height: 300px;
 	max-width: 100%;
 	max-height: 50vh;
+
 	/* Prevent small media objects from losing their original aspect ratio, see T313362. */
 	object-fit: contain;
 }
